Version 1.1.5

2006-10-15
 Added proc argument name sanity checks.

2006-08-22
 Fixed header generation bug. [Bug 8500]
 Fixed upvar bug. [Bug 8534]
 Fixed namespace resolution bug. [Bug 8538]
 Fixed tkwait syntax info.
 Check namespace eval better. [Bug 8539]
 Fixed bad close brace alignment warning. [Bug 8537]
 Recognise FRINK style inline comments. [FR 2540]
 Allow level in inline filter comments.

Version 1.1.4

2006-07-05
 Allow embedded usage.
 Remade a bit to allow nagelfar to be loaded embedded.
 Support source -encoding when instrumenting 8.5 code.
 Added more syntax db info, specially for 8.5.
 Db info for tkwait and serial fconfigure channels.

Version 1.1.3

2006-05-20
 Support vim as editor.
 Support different tab settings.
 See next error button in GUI.
 Text search in report window.
 Show less important info in gray.
 Ideas from Andreas Leitgeb.
 
2006-05-16
 Detect missing space after cmd e.g. if{something}

2005-04-03
 When starting up in wish on windows it is pointless to not run in gui mode.
 Added possibility to delete files from database list.
 Added simple File menu.
 Ideas from Arjen Markus.

2005-02-20
 Extended handling of if 0 {...} as a comment to handle e.g. { 0 } too.
 Instrument a missing "else" in code coverage, to get branch coverage.
 
Version 1.1.2

2005-01-29
 Added -quiet and -glob. Ideas from Phil Wise.
 Fixed a bug in -header which did not work in 8.5.

2005-01-14
 Added -header for header generation. Idea from Yiftach Tzori.

2005-01-12
 Added the option to use emacs to view files instead of the internal editor.
 Started to move source code to separate smaller files.

Version 1.1.1

2005-01-01
 Fixed a bug in instrumenting which prevented instrumenting multiple files.
 Preserve header and permissions in instrumented file to allow an executable
 file to remain executable after instrumentation.

Version 1.1

2004-12-21
 Added instrumenting and markup.

2004-10-??
 Changes after suggestions from Uwe Koloska: